<resources>
    <string name="app_name">NailsStudio</string>
    <string name="tv_1">Iniciar Sesion</string>
    <string name="et_1">Your Email</string>
    <string name="et_2">Password</string>
    <string name="button_1">Login</string>
    <string name="button_2">I dont Have Cunt</string>
    <string name="logo">Logo.</string>
    <string name="cb_recuerdame">Recuerdame</string>


    <string name="AgendarCitas">Agendar Citas.</string>
    <string name="Citas">Citas.</string>
    <string name="Corte">Corte.</string>
    <string name="ib_calandario">Imagen de Calendario.</string>
    <string name="ib_uñas">Imagen de Uñas.</string>
    <string name="ib_corte">Imagen de Corte.</string>


    <string name="crearCuenta">Agregar Cuenta.</string>
    <string name="Nombre">Name.</string>
    <string name="cPassword">Confirm Password</string>
    <string name="createAccount">Create Account</string>

    <string name="tv_calendarioagregar">Seleccione Dia Para Agregar la Cita</string>
    <string name="button_aceptar">Aceptar</string>
    <string name="button_cancelar">Cancelar</string>
    <string name="button_guardar">Guardar</string>


    <string name="sele_hora">Selecciona la hora</string>

    <string name="detalles">Detalles de la cita</string>
    <string name="detalles_nombre">Nombre del Cliente</string>
    <string name="detalles_telefono">Telefono del Cliente</string>

    <string name="texto_rb">Seleccione para que es la cita</string>
    <string name="rb_acrilico">Uñas Acrilico</string>
    <string name="rb_gelish">Gelish</string>
    <string name="rb_pestañas">Pestañas</string>
    <string name="rb_pedicure">Pedicure</string>
    <string name="tv_spinner">Metodo de pago</string>
    <string name="sp_efectivo">Efectivo</string>
    <string name="sp_tarjeta">Tarjeta de Credito/Debito</string>
    <string name="sp_mixto">Tarjeta y Efectivo</string>


    <string name="buascarDia">Seleccione el dia para buscar Citas</string>
    <string name="button_buscar">Buscar</string>


    <string name="Tv_Corte">Corte de caja</string>
    <string name="Selecciona">Selecciona la fecha con el boton</string>





    <string name="txt_codigo">Codigo del producto</string>
    <string name="txt_descripcion">Descripcion del producto</string>
    <string name="txt_precio">Precio del Producto</string>
    <string name="BotonRegistrar">Registrar Producto</string>
    <string name="BotonBuscar">Buscar Producto</string>
    <string name="BotonEliminar">Eliminar Producto</string>
    <string name="BotonModificar">Modificar Producto</string>
</resources>